--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "backend",
+  "name": "mern-quiz-backend",
   "version": "1.0.0",
+  "description": "Backend for MERN quiz app",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "npm install"
+    "dev": "nodemon server.js",
+    "seed": "node seedQuestions.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.10.1"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
